[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "homework"
version = "0.1.0"
description = "Homework project"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
license = "MIT"
package-mode = false

packages = [
    { include = "masks", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.0"
black = "^24.0"
isort = "^5.13"
mypy = "^1.11"

# Конфигурация Black
[tool.black]
line-length = 119
exclude = '''
(
  \.git
  | \.venv
  | venv
  | \.mypy_cache
  | \.pytest_cache
  | build
  | dist
)/
'''

# Конфигурация isort
[tool.isort]
profile = "black"
line_length = 119
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
known_first_party = ["masks"]
combine_as_imports = false
force_sort_within_sections = true
order_by_type = true
case_sensitive = false
lines_after_imports = 2
lines_between_types = 1
force_single_line = true

# Конфигурация mypy
[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = [
    ".git",
    "venv",
    ".venv",
    "build",
    "dist"
]